<resources>
    <string name="app_name">POWheel</string>
    <string name="action_settings">Settings</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="invalid_device_data">Invalid Device Data!</string>
    <string name="no_data">No data</string>
    <string name="not_supported">Not supported</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="supported">Supported</string>
    <string name="eula">"This application is not affiliated with OneWheel in any way. Use at your own risk! Send all questions, feedback, etc to kwatkins@gmail.com. Hit \'scan\' to connect to the OneWheel and look for logs on the sdcard. It\'s still on the rough side so watch yourself out there.")
          </string>
    <string name="formatter_item_count">Items: %s</string>

    <string name="menu_about">About</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_refresh">Refresh</string>
    <string name="logged_rides">Logged Rides</string>
    <string name="back_blink">Back Blink</string>
    <string name="front_blink">Front Blink</string>
    <string name="front_bright">Front Bright</string>
    <string name="back_bright">Back Bright</string>
    <string name="lights">Lights</string>
    <string name="custom">Custom</string>
    <string name="current_speed">Current Speed</string>
    <string name="trip_top_speed">Trip Top Speed:</string>
    <string name="battery">Battery</string>
    <string name="onewheel_ble_name">ONEWHEEL BLE NAME</string>
    <string name="min_duration">min</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="delete">Delete?</string>
    <string name="trip_connected_time">TRIP CONNECTED TIME</string>
    <string name="speed_alert">Speed alert</string>
    <string name="charge_alert">Charge alert</string>
    <string name="_95">95</string>
    <string name="_17">17</string>
    <string name="_27">27</string>
    <string name="speed">Speed</string>
    <string name="pads">Rider Pads</string>
    <string name="temp">Temperature</string>
    <string name="power">Power</string>
    <string name="bt_is_not_supported">Bluetooth is not available</string>
    <string name="connection_notification_channel">Active connection</string>
    <string name="connection_notification_text">Device connected</string>

    <string-array name="ow_ridemode_array">
        <item>CLASSIC</item>
        <item>XTREME</item>
        <item>ELEVATE</item>
    </string-array>
    <string-array name="owplus_ridemode_array">
        <item>SEQUOIA</item>
        <item>CRUZ</item>
        <item>MISSION</item>
        <item>ELEVATE</item>
        <item>DELIRIUM</item>
    </string-array>
    <string-array name="ow_lights_array">
        <item>OFF</item>
        <item>FRONT</item>
        <item>BACK</item>
    </string-array>
    <string-array name="donation_options">
        <item>PayPal</item>
    </string-array>
</resources>
