<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.kwatts.powtools.RidesListActivity"
    >
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/rides_row_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/date"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/rides_row_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/duration"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/rides_row_checkbox"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            />

    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ride_list_view"
        tools:listitem="@layout/rides_list_row"
         />
</LinearLayout>